RESOLVED FIXED 207919
REGRESSION (r256093): fast/events/touch/ios/block-without-overflow-scroll.html is failing
https://bugs.webkit.org/show_bug.cgi?id=207919
Summary REGRESSION (r256093): fast/events/touch/ios/block-without-overflow-scroll.htm...
Wenson Hsieh
Reported 2020-02-18 15:47:31 PST
Attachments
Fixes the tests (7.53 KB, patch)
2020-02-18 16:19 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-02-18 16:19:48 PST
Created attachment 391116 [details] Fixes the tests
WebKit Commit Bot
Comment 2 2020-02-18 20:14:40 PST
The commit-queue encountered the following flaky tests while processing attachment 391116 [details]: editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2020-02-18 20:15:15 PST
Comment on attachment 391116 [details] Fixes the tests Clearing flags on attachment: 391116 Committed r256903: <https://trac.webkit.org/changeset/256903>
WebKit Commit Bot
Comment 4 2020-02-18 20:15:17 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.