REGRESSION (r256093): fast/events/touch/ios/block-without-overflow-scroll.html is failing https://bugs.webkit.org/show_bug.cgi?id=207919 <rdar://problem/59565344>

Reviewed by Tim Horton.

Source/WebCore:

Three iOS-specific layout tests began to fail after r256093, since they currently depend on a particular
ordering when iterating over elements in a hash map. Instead of just rebaselining these tests, we can make them
more robust against similar changes in the future by forcing a deterministic order when printing out synchronous
touch event regions for testing.

I arbitrarily chose to sort the keys (which are touch event type names) in alphabetical order.

* page/scrolling/ScrollingStateFrameScrollingNode.cpp:
(WebCore::ScrollingStateFrameScrollingNode::dumpProperties const):

LayoutTests:

Rebaseline some layout tests after changing the order in which synchronous touch event regions are dumped when
calling internals.scrollingStateTreeAsText().

* fast/events/touch/ios/block-without-overflow-scroll-and-passive-observer-on-block-scrolling-state-expected.txt:
* fast/events/touch/ios/block-without-overflow-scroll-and-passive-observer-on-document-scrolling-state-expected.txt:
* fast/events/touch/ios/block-without-overflow-scroll-scrolling-state-expected.txt:


Canonical link: https://commits.webkit.org/220902@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256903 268f45cc-cd09-0410-ab3c-d52691b4dbfc